fixing mobile bulb movement overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -412,7 +412,6 @@ body{
 @media screen and (max-width:'500px') {
   body{
     margin: 0 0;
-    overflow-y: hidden;
     height: 100vh;
 
   }
